Side cleanup, update to keep iterator open for last open metric